[metadata]
name = OOPAO
description = OOPAO
author = cheritier
;version = attr: OOPAO.__version__
license = GPLv3
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
url = https://github.com/cheritier/OOPAO
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages =
    OOPAO
install_requires =
    numpy
    astropy
    joblib
    jsonpickle
    matplotlib
    mpmath
    numba
    numexpr
    psutil
    pyFFTW
    scikit_image
    scipy
    tqdm
    
python_requires =
    >=3.6
package_dir =
    =.
zip_safe =
    no

[options.extras_require]
cuda =
    cupy

;[options.entry_points]
;console_scripts =
;    OOPAO = OOPAO.main:main
